Added basic CRUD operations