@@ -1,7 +1,7 @@
 package com.example.MsaBackendApplication.controller;
 
 import com.example.MsaBackendApplication.model.Patient;
-import com.example.MsaBackendApplication.repository.UserRepository;
+import com.example.MsaBackendApplication.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -9,50 +9,52 @@ import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("/patients")
+@RequestMapping("/api/patients")
 public class PatientController {
 
     @Autowired
-    private UserRepository userRepository;
+    private UserService userService; // Using UserService as Patient is a subclass of User
 
+    // Get all patients
     @GetMapping
-    public List<Patient> getAllPatients() {
-        return userRepository.findAll().stream()
-                .filter(user -> user instanceof Patient)
-                .map(user -> (Patient) user)
-                .toList();
+    public ResponseEntity<List<Patient>> getAllPatients() {
+        List<Patient> patients = userService.getAllUsers().stream()
+                .filter(user -> user instanceof Patient)  // Filter only Patient objects
+                .map(user -> (Patient) user)  // Cast to Patient
+                .collect(Collectors.toList());
+        return new ResponseEntity<>(patients, HttpStatus.OK);
     }
 
+    // Get patient by ID
     @GetMapping("/{id}")
     public ResponseEntity<Patient> getPatientById(@PathVariable String id) {
-        Optional<Patient> patient = userRepository.findById(id).filter(user -> user instanceof Patient).map(user -> (Patient) user);
+        Optional<Patient> patient = userService.getUserById(id)
+                .filter(user -> user instanceof Patient)  // Ensure it's a Patient
+                .map(user -> (Patient) user);  // Cast to Patient
         return patient.map(ResponseEntity::ok).orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND).build());
     }
 
+    // Create a new patient
     @PostMapping
     public ResponseEntity<Patient> createPatient(@RequestBody Patient patient) {
-        Patient savedPatient = (Patient) userRepository.save(patient);
-        return ResponseEntity.status(HttpStatus.CREATED).body(savedPatient);
+        Patient createdPatient = (Patient) userService.createUser(patient); // Create user (Patient is a subclass of User)
+        return ResponseEntity.status(HttpStatus.CREATED).body(createdPatient);
     }
 
+    // Update patient by ID
     @PutMapping("/{id}")
     public ResponseEntity<Patient> updatePatient(@PathVariable String id, @RequestBody Patient patient) {
-        if (!userRepository.existsById(id)) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-        }
-        patient.setId(id);
-        Patient updatedPatient = (Patient) userRepository.save(patient);
-        return ResponseEntity.ok(updatedPatient);
+        Patient updatedPatient = (Patient) userService.updateUser(id, patient); // Update and cast to Patient
+        return updatedPatient != null ? ResponseEntity.ok(updatedPatient) : ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
 
+    // Delete patient by ID
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deletePatient(@PathVariable String id) {
-        if (!userRepository.existsById(id)) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND).build();
-        }
-        userRepository.deleteById(id);
-        return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
+        boolean isDeleted = userService.deleteUser(id); // Delete user (Patient is a subclass of User)
+        return isDeleted ? ResponseEntity.noContent().build() : ResponseEntity.status(HttpStatus.NOT_FOUND).build();
     }
 }
